number of calls still needs some beautification

--- a/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
+++ b/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
@@ -83,8 +83,8 @@ muscle sample \tikz[baseline=-0.5ex] \draw[->] (0,0) -- node[above] (A)
 \end{enumerate}
 \end{frame}
 
-\begin{frame}{Number of calls depends on caller (and data set)}
-\includegraphics[height=0.9\textheight]{figures/call-set-size-snvs-1-MSSM_106.pdf}
+\begin{frame}
+\includegraphics[height=0.9\textheight]{figures/2018-11-06-number-of-calls/snvs-1.pdf}
 \end{frame}
 
 \begin{frame}<1>[label=hardfilterlimit]{Limitations of traditional filtering}
