number of calls on log10 scale

--- a/notebook/2018-11-06-number-of-calls/2018-11-06-number-of-calls.Rmd
+++ b/notebook/2018-11-06-number-of-calls/2018-11-06-number-of-calls.Rmd
@@ -22,15 +22,19 @@ Import, engineer and plot data.
 ```{r}
 csv <- "~/projects/bsm/results/2018-11-06-number-of-calls/numcalls.csv"
 df <- read.csv(csv)
-df$caller <- factor(gsub("Tnseq", "TNseq.Mutect2", df$caller))
+df$caller <- factor(gsub("Tnseq", "TNseq", df$caller))
+df$caller <- factor(gsub("TNseq", "TNseq.Mutect2", df$caller))
 df$vartype <- factor(df$vartype, levels = c("snvs", "indels"), ordered = TRUE)
 ```
 
 ```{r all}
-bc <- barchart(caller ~ numcalls | sample + vartype, data = df, groups = filter, subset = caller != "TNseq.Mutect2-v201711", xlab = "number of calls")
+bc <- barchart(caller ~ numcalls | sample + vartype, data = df, groups = filter, subset = caller != "TNseq.Mutect2-v201711", xlab = "number of calls", xlim = c(0, ceiling(max(df$numcalls) / 1e5) * 1e5))
+bc.log <- barchart(caller ~ log10(numcalls) | sample + vartype, data = df, groups = filter, subset = caller != "TNseq.Mutect2-v201711", xlab = "log10 number of calls", xlim = c(0, 7))
 print(bc)
+print(bc.log)
 ```
 
 ```{r snvs, fig.asp=0.7}
 print(bc[2:3, 1])
+print(bc.log[2:3, 1])
 ```
