log10 scaled numcalls for SD presentation

--- a/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
+++ b/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
@@ -84,7 +84,9 @@ muscle sample \tikz[baseline=-0.5ex] \draw[->] (0,0) -- node[above] (A)
 \end{frame}
 
 \begin{frame}
-\includegraphics[height=0.9\textheight]{figures/2018-11-06-number-of-calls/snvs-1.pdf}
+\includegraphics<1>[height=0.9\textheight]{figures/2018-11-06-number-of-calls/snvs-1.pdf}
+
+\includegraphics<2>[height=0.9\textheight]{figures/2018-11-06-number-of-calls/snvs-2.pdf}
 \end{frame}
 
 \begin{frame}<1>[label=hardfilterlimit]{Limitations of traditional filtering}
