--- a/notebook/2018-11-12-JointSNVMix/2018-11-12-JointSNVMix.Rmd
+++ b/notebook/2018-11-12-JointSNVMix/2018-11-12-JointSNVMix.Rmd
@@ -32,6 +32,7 @@ library(lattice)
 library(latticeExtra)
 opts_chunk$set(dpi = 144)
 opts_chunk$set(out.width = "600px")
+opts_chunk$set(fig.asp = 2/3)
 opts_chunk$set(dev = c("png", "pdf"))
 lattice.options(default.args = list(as.table = TRUE))
 lattice.options(default.theme = "standard.theme")
@@ -42,22 +43,49 @@ tsv <- "~/projects/bsm/results/2018-11-12-JointSNVMix/chr22/jsm.tsv.every-1000"
 records <- read.delim(tsv)
 # aggregate probabilities
 # across genotypes for the case/tumor sample
-records$p_AA_XX <- with(records, p_AA_AA + p_AA_AB + p_AA_BB)
-records$p_AB_XX <- with(records, p_AB_AA + p_AB_AB + p_AB_BB)
-records$p_BB_XX <- with(records, p_BB_AA + p_BB_AB + p_BB_BB)
+records$p_AA_XY <- with(records, p_AA_AA + p_AA_AB + p_AA_BB)
+records$p_AB_XY <- with(records, p_AB_AA + p_AB_AB + p_AB_BB)
+records$p_BB_XY <- with(records, p_BB_AA + p_BB_AB + p_BB_BB)
 # across genotypes for the control/normal sample
-records$p_XX_AA <- with(records, p_AA_AA + p_AB_AA + p_BB_AA)
-records$p_XX_AB <- with(records, p_AA_AB + p_AB_AB + p_BB_AB)
-records$p_XX_BB <- with(records, p_AA_BB + p_AB_BB + p_BB_BB)
+records$p_XY_AA <- with(records, p_AA_AA + p_AB_AA + p_BB_AA)
+records$p_XY_AB <- with(records, p_AA_AB + p_AB_AB + p_BB_AB)
+records$p_XY_BB <- with(records, p_AA_BB + p_AB_BB + p_BB_BB)
+# all somatic mutations from AA
+records$p_AA_XB <- with(records, p_AA_AB + p_AA_BB)
+# all somatic mutations from AB
+records$p_AB_XX <- with(records, p_AA_AB + p_AA_BB)
+# all somatic mutations from BB
+records$p_BB_AX <- with(records, p_BB_AB + p_BB_AA)
 records.l <-
     reshape(records, varying = v <- grep("p_", names(records), value = TRUE),
             v.names = "p", timevar = "GT", times = sub("p_", "", v), direction = "long")
 ```
 
-```{r controlGT}
-histogram(~ p_AA_XX + p_AB_XX + p_BB_XX, data = records, layout = c(3, 1), main = "Control sample genotype", xlab = "posterior probability")
+```{r hist-controlGT}
+GThist <- function(sset, dt = records.l, lay = c(length(sset), 1), ...) {
+    histogram(~ p | GT, data = records.l, subset = GT %in% sset,
+              layout = lay, xlab = "Posterior Probability", ...)
+}
+GThist(c("AA_XY", "AB_XY", "BB_XY"), main = "Control sample genotype")
+GThist(c("AA_XY", "AB_XY", "BB_XY"), main = "Control sample genotype", ylim = c(0, 1.5))
 ```
 
-```{r caseGT}
-histogram(~ p_XX_AA + p_XX_AB + p_XX_BB, data = records, layout = c(3, 1), main = "Case sample genotype", xlab = "posterior probability")
+```{r hist-caseGT}
+GThist(c("XY_AA", "XY_AB", "XY_BB"), main = "Case sample genotype")
+GThist(c("XY_AA", "XY_AB", "XY_BB"), main = "Case sample genotype", ylim = c(0, 1.5))
+```
+
+```{r hist-som-mut-AA}
+GThist(c("AA_AB", "AA_BB", "AA_XB"), main = "Somatic mutations from AA")
+GThist(c("AA_AB", "AA_BB", "AA_XB"), main = "Somatic mutations from AA", ylim = c(0, 1.5))
+```
+
+```{r hist-som-mut-AB}
+GThist(c("AB_AA", "AB_BB", "AB_XX"), main = "Somatic mutations from AB")
+GThist(c("AB_AA", "AB_BB", "AB_XX"), main = "Somatic mutations from AB", ylim = c(0, 1.5))
+```
+
+```{r hist-som-mut-BB}
+GThist(c("BB_AB", "BB_AA", "BB_AX"), main = "Somatic mutations from BB")
+GThist(c("BB_AB", "BB_AA", "BB_AX"), main = "Somatic mutations from BB", ylim = c(0, 1.5))
 ```
